--- a/.github/workflows/daily_summary.yml
+++ b/.github/workflows/daily_summary.yml
@@ -118,7 +118,7 @@ jobs:
           printf "We have the following pending tasks:\n" >> "$GITHUB_OUTPUT"
           printf "$TASKS_JSON\n" >> "$GITHUB_OUTPUT"
           printf "and $LEFTOVER_PENDING_TASKS more...\n" >> "$GITHUB_OUTPUT"
-          printf "We have the following leads:\n" >> "$GITHUB_OUTPUT"
+          printf "\nWe also have the following leads:\n" >> "$GITHUB_OUTPUT"
           printf "$LEADS_JSON\n" >> "$GITHUB_OUTPUT"
           printf "and $LEFTOVER_LEADS more...\n" >> "$GITHUB_OUTPUT"
           printf "\nPlease review them and take action as needed.\n" >> "$GITHUB_OUTPUT"
@@ -134,7 +134,7 @@ jobs:
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "📬 Daily Pending Tasks Summary"
           to: aa@agmtechnology.com
-          from: aa@agmtechnology.com
+          from: aa@agmtechnology.com,cr@agmtechnology.com,jc@agmtechnology.com,hc@agmtechnology.com,rc@agmtechnology.com,mjc@agmtechnology.com,ac@agmtechnology.com
           body: ${{ steps.prep_email.outputs.body }}
 
   notify-failure:
@@ -151,6 +151,6 @@ jobs:
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "🚨 Daily Summary Workflow FAILED"
           to: aa@agmtechnology.com
-          from: aa@agmtechnology.com
+          from: aa@agmtechnology.com,cr@agmtechnology.com,jc@agmtechnology.com,hc@agmtechnology.com,rc@agmtechnology.com,mjc@agmtechnology.com,ac@agmtechnology.com
           body: |
             The daily pending tasks summary workflow failed. Please review the workflow logs for details.
