Update alias update workflow to use PATCH method for API call
- Changed the HTTP method from POST to PATCH in the bulk alias update endpoint, aligning with the API specification for partial updates.
- This modification enhances the accuracy of the API interaction within the workflow.

--- a/.github/workflows/update_aliases.yml
+++ b/.github/workflows/update_aliases.yml
@@ -38,7 +38,7 @@ jobs:
             fi
 
             # 2. Trigger bulk alias update endpoint
-            response=$(curl -s -w "\n%{http_code}" -X POST \
+            response=$(curl -s -w "\n%{http_code}" -X PATCH \
               -H "Authorization: Bearer $access_token" \
               -H "Content-Type: application/json" \
               -d '{"master_account":"br"}' \
