--- a/.github/workflows/update_aliases.yml
+++ b/.github/workflows/update_aliases.yml
@@ -13,9 +13,8 @@ jobs:
     steps:
       - name: Request token and update aliases
         id: update
-        uses: Wandalen/wretry.action@v2
-        with:
-          command: |
+        shell: bash
+        run: |
             # ─────────────────────────────────────────────────────────────
             # 1. Fetch access token (same as ETL)
             response=$(curl -s -w "\n%{http_code}" -X POST \
@@ -65,8 +64,6 @@ jobs:
             # Pass list to next job via step output
             # Write multi-line output without leading spaces on delimiter lines
             printf "accounts_list<<EOF\n%s\nEOF\n" "$accounts_md" >> "$GITHUB_OUTPUT"
-          attempt_limit: 24  # Retry up to 24 times (10-min interval) like ETL
-          attempt_delay: 600000  # 10-minute pause (ms)
 
   notify-success:
     needs: update-aliases
