--- a/.github/workflows/daily_summary.yml
+++ b/.github/workflows/daily_summary.yml
@@ -150,7 +150,7 @@ jobs:
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "🚨 Daily Summary Workflow FAILED"
-          to: aa@agmtechnology.com,cr@agmtechnology.com,jc@agmtechnology.com,hc@agmtechnology.com,rc@agmtechnology.com,mjc@agmtechnology.com,ac@agmtechnology.com
+          to: aa@agmtechnology.com
           from: aa@agmtechnology.com
           body: |
             The daily pending tasks summary workflow failed. Please review the workflow logs for details.
