--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -63,7 +63,7 @@ jobs:
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "✅ Daily ETL Pipeline SUCCEEDED"
-          to: aa@agmtechnology.com,cr@agmtechnology.com
+          to: cr@agmtechnology.com
           from: aa@agmtechnology.com
           body: |
             The ETL Pipeline completed successfully.
@@ -81,7 +81,7 @@ jobs:
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "🚨 Daily ETL Pipeline FAILED"
-          to: aa@agmtechnology.com,cr@agmtechnology.com
+          to: cr@agmtechnology.com
           from: aa@agmtechnology.com
           body: |
             The ETL Pipeline failed.
