Update ETL pipeline attempt limit for market data workflow
- Changed the `attempt_limit` in the `etl_market_data.yaml` workflow from 12 to 1, reducing the retry attempts to one and adjusting the retry duration to 10 minutes for improved efficiency in error handling.

--- a/.github/workflows/etl_market_data.yaml
+++ b/.github/workflows/etl_market_data.yaml
@@ -47,7 +47,7 @@ jobs:
             fi
             
             echo "http_status=200" >> "$GITHUB_OUTPUT"
-          attempt_limit: 12 # 1 original + 11 retries (2 hours)
+          attempt_limit: 1 # 1 original + 1 retry (10 minutos)
           attempt_delay: 600000 # 10-minute pause (ms)
           
   notify-success:
